server/azuredeploy.json
{
    "$schema":"https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion":"1.0.0.0",
    "parameters":{
        "adminUsername":{
            "type":"string",
            "defaultValue": "azureuser",
            "metadata":{
                "description":"Username for the Virtual Machine."
            }
        },
        "authenticationType":{
            "type":"string",
            "defaultValue":"sshPublicKey",
            "allowedValues":[
                "sshPublicKey",
                "password"
            ],
            "metadata":{
                "description":"Type of authentication to use on the Virtual Machine. SSH key is recommended."
            }
        },
        "adminPasswordOrKey":{
            "type":"securestring",
            "metadata":{
                "description":"SSH Key or password for the Virtual Machine. SSH key is recommended."
            }
        },
        "letsEncryptMail": {
            "type": "string",
            "metadata": {
                "description": "The e-mail address to be used when requesting a Let's Encrypt certificate."
            }
        },
        "dnsLabelPrefix":{
            "type":"string",
            "defaultValue":"[toLower(concat('rdbvm-', uniqueString(resourceGroup().id)))]",
            "metadata":{
                "description":"Unique DNS Name for the Public IP used to access the Virtual Machine. It must be lowercase. It should match the following regular expression, or it will raise an error: ^[a-z][a-z0-9-]{1,61}[a-z0-9]$"
            }
        },
        "vmName":{
            "type":"string",
            "defaultValue":"rdbVM",
            "metadata":{
                "description":"The name of your Virtual Machine."
            }
        },
        "VmSize":{
            "type":"string",
            "defaultValue":"Standard_D4s_v3",
            "allowedValues":[
                "Standard_B4ms",
                "Standard_D4s_v3",
                "Standard_D4_v3",
                "Standard_D8_v3",
                "Standard_D8s_v3",
                "Standard_D4a_v4",
                "Standard_D8a_v4",
                "Standard_D4d_v4",
                "Standard_D8d_v4"
            ],
            "metadata":{
                "description":"The size of the VM"
            }
        },
        "keycloakAdminUsername":{
            "type":"string",
            "defaultValue":"admin",
            "metadata":{
                "description":"Name for the administrative user that will be created on Keycloak instance."
            }
        },
        "keycloakAdminPassword":{
            "type":"securestring",
            "metadata":{
                "description":"Keycloak administrative user password."
            }
        }
    },
    "variables":{
        "ubuntuOSVersion":"18.04-LTS",
        "virtualNetworkName": "vNet",
        "subnetName": "subnetName",
        "networkSecurityGroupName": "SecGroupNet",
        "publicIpAddressName":"[concat(parameters('vmName'), 'PublicIP' )]",
        "networkInterfaceName":"[concat(parameters('vmName'),'NetInt')]",
        "subnetRef":"[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('subnetName'))]",
        "osDiskType":"Standard_LRS",
        "subnetAddressPrefix":"10.1.0.0/24",
        "addressPrefix":"10.1.0.0/16",
        "linuxConfiguration":{
            "disablePasswordAuthentication":true,
            "ssh":{
                "publicKeys":[
                    {
                        "path":"[concat('/home/', parameters('adminUsername'), '/.ssh/authorized_keys')]",
                        "keyData":"[parameters('adminPasswordOrKey')]"
                    }
                ]
            }
        }
    },
    "resources":[
        {
            "type":"Microsoft.Network/networkInterfaces",
            "apiVersion":"2018-10-01",
            "name":"[variables('networkInterfaceName')]",
            "location":"[resourceGroup().location]",
            "dependsOn":[
                "[resourceId('Microsoft.Network/networkSecurityGroups/', parameters('networkSecurityGroupName'))]",
                "[resourceId('Microsoft.Network/virtualNetworks/', parameters('virtualNetworkName'))]",
                "[resourceId('Microsoft.Network/publicIpAddresses/', variables('publicIpAddressName'))]"
            ],
            "properties":{
                "ipConfigurations":[
                    {
                        "name":"ipconfig1",
                        "properties":{
                            "subnet":{
                                "id":"[variables('subnetRef')]"
                            },
                            "privateIPAllocationMethod":"Dynamic",
                            "publicIpAddress":{
                                "id":"[resourceId('Microsoft.Network/publicIPAddresses',variables('publicIPAddressName'))]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup":{
                    "id":"[resourceId('Microsoft.Network/networkSecurityGroups',parameters('networkSecurityGroupName'))]"
                }
            }
        },
        {
            "type":"Microsoft.Network/networkSecurityGroups",
            "apiVersion":"2019-02-01",
            "name":"[parameters('networkSecurityGroupName')]",
            "location":"[resourceGroup().location]",
            "properties":{
                "securityRules":[
                    {
                        "name":"webHttpPort",
                        "properties":{
                            "priority":1000,
                            "protocol":"*",
                            "access":"Allow",
                            "direction":"Inbound",
                            "sourceAddressPrefix":"*",
                            "sourcePortRange":"*",
                            "destinationAddressPrefix":"*",
                            "destinationPortRange":"80"
                        }
                    },
                    {
                        "name":"webHttpsPort",
                        "properties":{
                            "priority":1001,
                            "protocol":"*",
                            "access":"Allow",
                            "direction":"Inbound",
                            "sourceAddressPrefix":"*",
                            "sourcePortRange":"*",
                            "destinationAddressPrefix":"*",
                            "destinationPortRange":"443"
                        }
                    },
                    {
                        "name":"apmPort",
                        "properties":{
                            "priority":1002,
                            "protocol":"*",
                            "access":"Allow",
                            "direction":"Inbound",
                            "sourceAddressPrefix":"*",
                            "sourcePortRange":"*",
                            "destinationAddressPrefix":"*",
                            "destinationPortRange":"11800"
                        }
                    },
                    {
                        "name":"servicePorts",
                        "properties":{
                            "priority":1003,
                            "protocol":"*",
                            "access":"Allow",
                            "direction":"Inbound",
                            "sourceAddressPrefix":"*",
                            "sourcePortRange":"*",
                            "destinationAddressPrefix":"*",
                            "destinationPortRange":"42733-42735"
                        }
                    }
                ]
            }
        },
        {
            "type":"Microsoft.Network/virtualNetworks",
            "apiVersion":"2019-04-01",
            "name":"[parameters('virtualNetworkName')]",
            "location":"[resourceGroup().location]",
            "properties":{
                "addressSpace":{
                    "addressPrefixes":[
                        "[variables('addressPrefix')]"
                    ]
                },
                "subnets":[
                    {
                        "name":"[parameters('subnetName')]",
                        "properties":{
                            "addressPrefix":"[variables('subnetAddressPrefix')]",
                            "privateEndpointNetworkPolicies":"Enabled",
                            "privateLinkServiceNetworkPolicies":"Enabled"
                        }
                    }
                ]
            }
        },
        {
            "type":"Microsoft.Network/publicIpAddresses",
            "apiVersion":"2019-02-01",
            "name":"[variables('publicIpAddressName')]",
            "location":"[resourceGroup().location]",
            "properties":{
                "publicIpAllocationMethod":"Dynamic",
                "publicIPAddressVersion":"IPv4",
                "dnsSettings":{
                    "domainNameLabel":"[parameters('dnsLabelPrefix')]"
                },
                "idleTimeoutInMinutes":4
            },
            "sku":{
                "name":"Basic",
                "tier":"Regional"
            }
        },
        {
            "type":"Microsoft.Compute/virtualMachines",
            "apiVersion":"2019-03-01",
            "name":"[parameters('vmName')]",
            "location":"[resourceGroup().location]",
            "dependsOn":[
                "[resourceId('Microsoft.Network/networkInterfaces/', variables('networkInterfaceName'))]"
            ],
            "properties":{
                "hardwareProfile":{
                    "vmSize":"[parameters('VmSize')]"
                },
                "storageProfile":{
                    "osDisk":{
                        "createOption":"fromImage",
                        "managedDisk":{
                            "storageAccountType":"[variables('osDiskType')]"
                        }
                    },
                    "imageReference":{
                        "publisher":"Canonical",
                        "offer":"UbuntuServer",
                        "sku":"[variables('ubuntuOSVersion')]",
                        "version":"latest"
                    }
                },
                "networkProfile":{
                    "networkInterfaces":[
                        {
                            "id":"[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaceName'))]"
                        }
                    ]
                },
                "osProfile":{
                    "computerName":"[parameters('vmName')]",
                    "adminUsername":"[parameters('adminUsername')]",
                    "adminPassword":"[parameters('adminPasswordOrKey')]",
                    "linuxConfiguration":"[if(equals(parameters('authenticationType'), 'password'), json('null'), variables('linuxConfiguration'))]"
                }
            },
            "resources":[
                {
                    "name":"installation-script",
                    "type":"extensions",
                    "location":"[resourceGroup().location]",
                    "apiVersion":"2019-03-01",
                    "dependsOn":[
                        "[concat('Microsoft.Compute/virtualMachines/', parameters('vmName'))]"
                    ],
                    "tags":{
                        "displayName":"installation-script"
                    },
                    "properties":{
                        "publisher":"Microsoft.Azure.Extensions",
                        "type":"CustomScript",
                        "typeHandlerVersion":"2.1",
                        "autoUpgradeMinorVersion":true,
                        "settings":{
                            "skipDos2Unix":false,
                            "fileUris":[
                                "https://raw.githubusercontent.com/RevDeBug/azure-template/feat/licensing/server/scripts/init.sh"
                            ]
                        },
                        "protectedSettings":{
                            "commandToExecute":"[concat('bash init.sh', ' /home/', parameters('adminUsername'), ' ', parameters('letsEncryptMail'), ' ',reference(variables('publicIPAddressName')).dnsSettings.fqdn, ' ', parameters('keycloakAdminUsername'), ' ', parameters('keycloakAdminPassword'))]"
                        }
                    }
                }
            ]
        },
        {
            "apiVersion": "2020-06-01",
            "name": "pid-62c1e503-7f92-47ea-b3a1-a31380b19e5e",
            "type": "Microsoft.Resources/deployments",
            "properties": {
                "mode": "Incremental",
                "template": {
                    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
                    "contentVersion": "1.0.0.0",
                    "resources": []
                }
            }
        }
    ],
    "outputs":{
        "adminUsername":{
            "type":"string",
            "value":"[parameters('adminUsername')]"
        },
        "hostname":{
            "type":"string",
            "value":"[reference(variables('publicIPAddressName')).dnsSettings.fqdn]"
        },
        "sshCommand":{
            "type":"string",
            "value":"[concat('ssh ', parameters('adminUsername'), '@', reference(variables('publicIPAddressName')).dnsSettings.fqdn)]"
        }
    }
}
